--- a/index.html
+++ b/index.html
@@ -4,175 +4,41 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sand Stone Lineup</title>
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#000000">
-<style>
-*{box-sizing:border-box;margin:0;padding:0;font-family:Arial,sans-serif}
-body{background:#111;color:#fff;min-height:100vh}
-.ad-banner{display:block;background:#ffcc00;color:#000;text-align:center;padding:12px;text-decoration:none;font-weight:bold;cursor:pointer}
-header{display:flex;justify-content:space-between;align-items:center;padding:15px}
-header select{margin-left:10px;padding:5px;background:#222;color:#fff;border:none;border-radius:5px;cursor:pointer}
-.menu-btn{font-size:26px;cursor:pointer}
-nav{display:none;background:#1b1b1b}
-nav div{padding:12px;border-top:1px solid #333;cursor:pointer}
-main{padding:15px;text-align:center}
-.map-container{position:relative;max-width:800px;margin:auto}
-.map{width:100%;border-radius:10px;border:2px solid #000}
-.red-dot{position:absolute;width:20px;height:20px;background:red;border-radius:50%;border:2px solid white;transform:translate(-50%,-50%);text-align:center;color:white;font-weight:bold;line-height:18px;cursor:pointer}
-.red-dot .icon { pointer-events:none; font-size:12px; position:absolute; top:-20px; }
-#grenadeMenu{display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:#111;padding:15px;border-radius:10px;z-index:300}
-#grenadeMenu h3{color:white;text-align:center;margin-bottom:8px}
-#grenadeMenu button{width:100%;margin:5px 0;padding:8px;background:#222;color:white;border:none;border-radius:6px;cursor:pointer}
-#grenadeMenu button:hover{background:red}
-#videoPopup{display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:black;padding:10px;border-radius:10px;z-index:400}
-#videoPopup iframe{width:320px;height:180px}
-#videoPopup button{width:100%;margin-top:6px}
-#settingsPopup{display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:white;padding:20px;border-radius:10px;z-index:300;color:#000}
-#tutorial{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:#f2f2f2;padding:20px;border-radius:10px;z-index:500;color:#000}
-</style>
+
+<!-- CSS BAĞLANTI -->
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<a href="#" id="adBanner" class="ad-banner">REKLAM ALANI</a>
+<div id="topBar" onclick="openInsta()">Instagram: solixx144</div>
 
 <header>
-<h1 id="sandstone">Sand Stone Lineup</h1>
-<div>
-<div class="menu-btn" onclick="toggleMenu()">☰</div>
-<select id="languageSelect">
-<option value="tr">Türkçe</option>
-<option value="en">English</option>
-<option value="ru">Русский</option>
+<h2>Sand Stone Lineup</h2>
+<select id="lang" onchange="setLang()">
+<option value="tr">TR</option>
+<option value="en">EN</option>
+<option value="ru">RU</option>
 </select>
-</div>
 </header>
 
-<nav id="menu">
-<div onclick="yakinda()">Dune</div>
-<div onclick="yakinda()">Rust</div>
-<div onclick="yakinda()">Zone 7</div>
-<div onclick="yakinda()">Hanami</div>
-<div onclick="yakinda()">Province</div>
-<div onclick="yakinda()">Breeze</div>
-</nav>
+<div class="map">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGnQmTu2-0yu6rQSVa_4l7w18-6h8tYl3hQRy7deax1w&s=10">
 
-<main>
-<div class="map-container">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGnQmTu2-0yu6rQSVa_4l7w18-6h8tYl3hQRy7deax1w&s=10" class="map">
-
-<!-- Noktalar doğru yerlerde (yaklaşık yüzde) -->
-<div class="red-dot" id="marketDot" style="left:50%;top:70%">X
-  <div class="icon smoke">💨</div>
-  <div class="icon flash" style="left:12px">⚡</div>
-  <div class="icon molly" style="left:24px">🔥</div>
+<div class="point" style="top:60%;left:45%" onclick="openPopup('market')"></div>
+<div class="point" style="top:40%;left:30%" onclick="openPopup('a')"></div>
+<div class="point" style="top:35%;left:70%" onclick="openPopup('b')"></div>
 </div>
 
-<div class="red-dot" id="aSiteDot" style="left:25%;top:40%">X
-  <div class="icon smoke">💨</div>
-  <div class="icon flash" style="left:12px">⚡</div>
-  <div class="icon molly" style="left:24px">🔥</div>
+<div id="popup">
+<div id="close" onclick="closePopup()">✕</div>
+<h3 id="areaTitle"></h3>
+<button onclick="playVideo('smoke')">Smoke</button>
+<button onclick="playVideo('flash')">Flash</button>
+<button onclick="playVideo('molly')">Molly</button>
 </div>
 
-<div class="red-dot" id="bSiteDot" style="left:75%;top:35%">X
-  <div class="icon smoke">💨</div>
-  <div class="icon flash" style="left:12px">⚡</div>
-  <div class="icon molly" style="left:24px">🔥</div>
-</div>
-</div>
-</main>
-
-<div id="grenadeMenu">
-<div style="text-align:right"><span id="closeMenu" style="cursor:pointer;font-weight:bold;font-size:20px">X</span></div>
-<h3 id="menuTitle">Market</h3>
-<button data-type="smoke">Smoke</button>
-<button data-type="flash">Flash</button>
-<button data-type="molly">Molly</button>
-</div>
-
-<div id="videoPopup">
-<iframe id="videoFrame" allowfullscreen></iframe>
-<button id="closeVideo">Kapat</button>
-</div>
-
-<div id="tutorial">
-<h3>Nasıl Kullanılır?</h3>
-<p>Kırmızı noktalara tıkla → grenade seç → video izle</p>
-<button onclick="tutorial.style.display='none'">Tamam</button>
-</div>
-
-<script>
-// Reklam banner
-const ads=["https://www.tiktok.com/@solixx144","https://www.youtube.com/","https://example.com"];
-let currentAd=0;
-const adBanner=document.getElementById("adBanner");
-adBanner.onclick=()=>{window.open(ads[currentAd],"_blank"); currentAd=(currentAd+1)%ads.length;}
-
-// Menü toggle
-function toggleMenu(){
-const menu=document.getElementById("menu");
-menu.style.display=(menu.style.display==="block")?"none":"block";
-}
-
-// Haritalar -> Yakında
-function yakinda(){
-const lang=document.getElementById("languageSelect").value;
-const texts={tr:"Yakında 🚧",en:"Coming soon",ru:"Скоро"};
-alert(texts[lang]);
-}
-
-// Dil Seçimi
-const langSelect=document.getElementById("languageSelect");
-const texts={
-tr:{header:"Sand Stone Lineup",tutorial:"Kırmızı noktalara tıkla → grenade seç → video izle",smoke:"Smoke",flash:"Flash",molly:"Molly"},
-en:{header:"Sand Stone Lineup",tutorial:"Click red dots → select grenade → watch video",smoke:"Smoke",flash:"Flash",molly:"Molly"},
-ru:{header:"Sand Stone Lineup",tutorial:"Нажмите на красные точки → выберите гранату → смотрите видео",smoke:"Дымовая",flash:"Флеш",molly:"Молли"}
-};
-langSelect.onchange=()=>{
-const lang=langSelect.value;
-document.getElementById("sandstone").innerText=texts[lang].header;
-document.getElementById("tutorial").querySelector("p").innerText=texts[lang].tutorial;
-document.querySelectorAll("#grenadeMenu button").forEach(btn=>{
-if(btn.dataset.type==="smoke") btn.innerText=texts[lang].smoke;
-if(btn.dataset.type==="flash") btn.innerText=texts[lang].flash;
-if(btn.dataset.type==="molly") btn.innerText=texts[lang].molly;
-});
-}
-
-// Grenade sistemi
-const videos={
-Market:{smoke:"https://www.youtube.com/embed/dQw4w9WgXcQ",flash:"https://www.youtube.com/embed/dQw4w9WgXcQ",molly:"https://www.youtube.com/embed/dQw4w9WgXcQ"},
-"A Site":{smoke:"https://www.youtube.com/embed/dQw4w9WgXcQ",flash:"https://www.youtube.com/embed/dQw4w9WgXcQ",molly:"https://www.youtube.com/embed/dQw4w9WgXcQ"},
-"B Site":{smoke:"https://www.youtube.com/embed/dQw4w9WgXcQ",flash:"https://www.youtube.com/embed/dQw4w9WgXcQ",molly:"https://www.youtube.com/embed/dQw4w9WgXcQ"}
-};
-let currentArea="Market";
-document.getElementById("marketDot").onclick=()=>openMenu("Market");
-document.getElementById("aSiteDot").onclick=()=>openMenu("A Site");
-document.getElementById("bSiteDot").onclick=()=>openMenu("B Site");
-
-function openMenu(area){
-currentArea=area;
-document.getElementById("menuTitle").innerText=area;
-document.getElementById("grenadeMenu").style.display="block";
-}
-
-document.querySelectorAll("#grenadeMenu button").forEach(btn=>{
-btn.onclick=()=>{
-document.getElementById("videoFrame").src=videos[currentArea][btn.dataset.type]+"?autoplay=1";
-document.getElementById("videoPopup").style.display="block";
-document.getElementById("grenadeMenu").style.display="none";
-}
-});
-
-// X ile popup kapatma
-document.getElementById("closeMenu").onclick=()=>{document.getElementById("grenadeMenu").style.display="none";};
-document.getElementById("closeVideo").onclick=()=>{
-document.getElementById("videoFrame").src="";
-document.getElementById("videoPopup").style.display="none";
-};
-
-// PWA Service Worker
-if("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js");}
-</script>
-
+<!-- JS BAĞLANTI -->
+<script src="app.js"></script>
 </body>
 </html>
