--- a/index.html
+++ b/index.html
@@ -2,43 +2,154 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sand Stone Lineup</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- CSS BAĞLANTI -->
-<link rel="stylesheet" href="style.css">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #0e0e0e;
+  color: white;
+  text-align: center;
+}
+
+header {
+  padding: 10px;
+  background: #111;
+}
+
+select {
+  padding: 5px;
+  font-size: 14px;
+}
+
+#map {
+  position: relative;
+  max-width: 420px;
+  margin: 20px auto;
+}
+
+#map img {
+  width: 100%;
+  display: block;
+}
+
+/* KIRMIZI NOKTA */
+.point {
+  width: 14px;
+  height: 14px;
+  background: red;
+  border-radius: 50%;
+  position: absolute;
+  cursor: pointer;
+  border: 2px solid white;
+}
+
+/* POPUP */
+#popup {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.7);
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+#popupContent {
+  background: #1a1a1a;
+  padding: 20px;
+  width: 90%;
+  max-width: 320px;
+  border-radius: 10px;
+}
+
+#popupContent button {
+  margin: 5px;
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+#close {
+  background: red;
+  color: white;
+  border: none;
+}
+</style>
 </head>
 
 <body>
 
-<div id="topBar" onclick="openInsta()">Instagram: solixx144</div>
-
 <header>
-<h2>Sand Stone Lineup</h2>
-<select id="lang" onchange="setLang()">
-<option value="tr">TR</option>
-<option value="en">EN</option>
-<option value="ru">RU</option>
-</select>
+  <h2 id="title">Sand Stone Lineup</h2>
+  <select id="lang">
+    <option value="tr">TR</option>
+    <option value="en">EN</option>
+    <option value="ru">RU</option>
+  </select>
 </header>
 
-<div class="map">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGnQmTu2-0yu6rQSVa_4l7w18-6h8tYl3hQRy7deax1w&s=10">
+<div id="map">
+  <!-- MİNİ MAP -->
+  <img src="https://i.imgur.com/4Qy6FjP.png" alt="mini map">
 
-<div class="point" style="top:60%;left:45%" onclick="openPopup('market')"></div>
-<div class="point" style="top:40%;left:30%" onclick="openPopup('a')"></div>
-<div class="point" style="top:35%;left:70%" onclick="openPopup('b')"></div>
+  <!-- DOĞRU NOKTALAR -->
+  <!-- A SITE -->
+  <div class="point" style="top:35%; left:28%;" data-site="A"></div>
+
+  <!-- B SITE -->
+  <div class="point" style="top:60%; left:70%;" data-site="B"></div>
+
+  <!-- MARKET -->
+  <div class="point" style="top:45%; left:50%;" data-site="MARKET"></div>
 </div>
 
+<!-- POPUP -->
 <div id="popup">
-<div id="close" onclick="closePopup()">✕</div>
-<h3 id="areaTitle"></h3>
-<button onclick="playVideo('smoke')">Smoke</button>
-<button onclick="playVideo('flash')">Flash</button>
-<button onclick="playVideo('molly')">Molly</button>
+  <div id="popupContent">
+    <h3 id="popupTitle"></h3>
+    <button id="smoke">💨 Smoke</button>
+    <button id="flash">⚡ Flash</button>
+    <button id="molly">🔥 Molly</button><br><br>
+    <button id="close">X</button>
+  </div>
 </div>
 
-<!-- JS BAĞLANTI -->
-<script src="app.js"></script>
+<!-- JS TAM BURADA -->
+<script>
+console.log("JS ÇALIŞIYOR");
+
+const popup = document.getElementById("popup");
+const popupTitle = document.getElementById("popupTitle");
+const langSelect = document.getElementById("lang");
+
+const text = {
+  tr: { smoke:"Smoke", flash:"Flash", molly:"Molly" },
+  en: { smoke:"Smoke", flash:"Flash", molly:"Molly" },
+  ru: { smoke:"Дым", flash:"Флеш", molly:"Молотов" }
+};
+
+document.querySelectorAll(".point").forEach(p => {
+  p.addEventListener("click", () => {
+    popupTitle.innerText = p.dataset.site;
+    popup.style.display = "flex";
+    updateLang();
+  });
+});
+
+document.getElementById("close").onclick = () => {
+  popup.style.display = "none";
+};
+
+langSelect.onchange = updateLang;
+
+function updateLang() {
+  const l = langSelect.value;
+  smoke.innerText = text[l].smoke;
+  flash.innerText = text[l].flash;
+  molly.innerText = text[l].molly;
+}
+</script>
+
 </body>
 </html>
