--- a/index.html
+++ b/index.html
@@ -3,31 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Sand Stone Lineup</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
-  background: #0e0e0e;
-  color: white;
-  text-align: center;
-}
-
-header {
-  padding: 10px;
-  background: #111;
-}
-
-select {
-  padding: 5px;
-  font-size: 14px;
+  background: #0f0f0f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 #map {
   position: relative;
-  max-width: 420px;
-  margin: 20px auto;
+  width: 90vw;
+  max-width: 600px;
 }
 
 #map img {
@@ -35,120 +25,82 @@ select {
   display: block;
 }
 
-/* KIRMIZI NOKTA */
+/* kırmızı nokta */
 .point {
+  position: absolute;
   width: 14px;
   height: 14px;
   background: red;
   border-radius: 50%;
-  position: absolute;
   cursor: pointer;
-  border: 2px solid white;
+  z-index: 10;
+  animation: pulse 1.6s infinite alternate;
 }
 
-/* POPUP */
+@keyframes pulse {
+  from { box-shadow: 0 0 5px red; transform: translateX(-2px); }
+  to   { box-shadow: 0 0 14px red; transform: translateX(2px); }
+}
+
+/* popup */
 #popup {
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0,0,0,.7);
   display: none;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  z-index: 100;
 }
 
 #popupContent {
   background: #1a1a1a;
   padding: 20px;
-  width: 90%;
-  max-width: 320px;
   border-radius: 10px;
-}
-
-#popupContent button {
-  margin: 5px;
-  padding: 8px 12px;
-  cursor: pointer;
+  color: white;
+  min-width: 200px;
+  text-align: center;
 }
 
 #close {
-  background: red;
-  color: white;
-  border: none;
+  margin-top: 10px;
+  padding: 6px 12px;
+  cursor: pointer;
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <h2 id="title">Sand Stone Lineup</h2>
-  <select id="lang">
-    <option value="tr">TR</option>
-    <option value="en">EN</option>
-    <option value="ru">RU</option>
-  </select>
-</header>
-
 <div id="map">
-  <!-- MİNİ MAP -->
-  <img src="https://i.imgur.com/4Qy6FjP.png" alt="mini map">
+  <!-- mini map -->
+  <img src="map.png" alt="map">
 
-  <!-- DOĞRU NOKTALAR -->
-  <!-- A SITE -->
-  <div class="point" style="top:35%; left:28%;" data-site="A"></div>
-
-  <!-- B SITE -->
-  <div class="point" style="top:60%; left:70%;" data-site="B"></div>
-
-  <!-- MARKET -->
-  <div class="point" style="top:45%; left:50%;" data-site="MARKET"></div>
+  <!-- KIRMIZI NOKTA -->
+  <div class="point" style="top:40%; left:55%;" data-text="A Site Smoke"></div>
 </div>
 
 <!-- POPUP -->
 <div id="popup">
   <div id="popupContent">
-    <h3 id="popupTitle"></h3>
-    <button id="smoke">💨 Smoke</button>
-    <button id="flash">⚡ Flash</button>
-    <button id="molly">🔥 Molly</button><br><br>
+    <div id="popupText"></div>
     <button id="close">X</button>
   </div>
 </div>
 
-<!-- JS TAM BURADA -->
 <script>
 console.log("JS ÇALIŞIYOR");
 
-const popup = document.getElementById("popup");
-const popupTitle = document.getElementById("popupTitle");
-const langSelect = document.getElementById("lang");
-
-const text = {
-  tr: { smoke:"Smoke", flash:"Flash", molly:"Molly" },
-  en: { smoke:"Smoke", flash:"Flash", molly:"Molly" },
-  ru: { smoke:"Дым", flash:"Флеш", molly:"Молотов" }
-};
-
 document.querySelectorAll(".point").forEach(p => {
   p.addEventListener("click", () => {
-    popupTitle.innerText = p.dataset.site;
-    popup.style.display = "flex";
-    updateLang();
+    document.getElementById("popupText").innerText = p.dataset.text;
+    document.getElementById("popup").style.display = "flex";
   });
 });
 
 document.getElementById("close").onclick = () => {
-  popup.style.display = "none";
+  document.getElementById("popup").style.display = "none";
 };
-
-langSelect.onchange = updateLang;
-
-function updateLang() {
-  const l = langSelect.value;
-  smoke.innerText = text[l].smoke;
-  flash.innerText = text[l].flash;
-  molly.innerText = text[l].molly;
-}
 </script>
 
 </body>
