Remove HTML structure and styles from index.html
Removed the HTML structure and styles for the page.

--- a/index.html
+++ b/index.html
@@ -1,40 +1,4 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-<meta charset="UTF-8">
-<title>Sand Stone Lineup</title>
-
-<style>
-body {
-  margin: 0;
-  background: #0f0f0f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-#map {
-  position: relative;
-  width: 90vw;
-  max-width: 600px;
-}
-
-#map img {
-  width: 100%;
-  display: block;
-}
-
-/* kırmızı nokta */
-.point {
-  position: absolute;
-  width: 14px;
-  height: 14px;
-  background: red;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 10;
-  animation: pulse 1.6s infinite alternate;
+3  animation: pulse 1.6s infinite alternate;
 }
 
 @keyframes pulse {
