--- a/index.html
+++ b/index.html
@@ -1,71 +1,59 @@
-3  animation: pulse 1.6s infinite alternate;
-}
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <title>Sand Stone Lineup</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-@keyframes pulse {
-  from { box-shadow: 0 0 5px red; transform: translateX(-2px); }
-  to   { box-shadow: 0 0 14px red; transform: translateX(2px); }
-}
-
-/* popup */
-#popup {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,.7);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 100;
-}
-
-#popupContent {
-  background: #1a1a1a;
-  padding: 20px;
-  border-radius: 10px;
-  color: white;
-  min-width: 200px;
-  text-align: center;
-}
-
-#close {
-  margin-top: 10px;
-  padding: 6px 12px;
-  cursor: pointer;
-}
-</style>
+  <!-- CSS BAĞLANTISI -->
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div id="map">
-  <!-- mini map -->
-  <img src="map.png" alt="map">
+  <!-- ÜST BAR -->
+  <header class="top-bar">
+    <h1>Sand Stone Lineup</h1>
 
-  <!-- KIRMIZI NOKTA -->
-  <div class="point" style="top:40%; left:55%;" data-text="A Site Smoke"></div>
-</div>
+    <select id="languageSelect">
+      <option value="tr">TR</option>
+      <option value="en">EN</option>
+      <option value="ru">RU</option>
+    </select>
+  </header>
 
-<!-- POPUP -->
-<div id="popup">
-  <div id="popupContent">
-    <div id="popupText"></div>
-    <button id="close">X</button>
+  <!-- MİNİ MAP -->
+  <main>
+    <div class="map-container">
+      <!-- BURADA MAP RESMİ -->
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGnQmTu2-0yu6rQSVa_4l7w18-6h8tYl3hQRy7deax1w&s=10"
+        alt="Mini Map"
+        class="map"
+      >
+
+      <!-- KIRMIZI NOKTALAR -->
+      <div class="point" data-name="A Site" style="top:38%; left:28%;"></div>
+      <div class="point" data-name="B Site" style="top:60%; left:72%;"></div>
+      <div class="point" data-name="Market" style="top:50%; left:48%;"></div>
+    </div>
+  </main>
+
+  <!-- POPUP -->
+  <div class="popup" id="popup">
+    <div class="popup-content">
+      <h2 id="popupTitle">Başlık</h2>
+
+      <div class="grenades">
+        <button id="smokeBtn">💨 Smoke</button>
+        <button id="flashBtn">⚡ Flash</button>
+        <button id="mollyBtn">🔥 Molly</button>
+      </div>
+
+      <button class="close-btn" onclick="closePopup()">✕ Kapat</button>
+    </div>
   </div>
-</div>
 
-<script>
-console.log("JS ÇALIŞIYOR");
-
-document.querySelectorAll(".point").forEach(p => {
-  p.addEventListener("click", () => {
-    document.getElementById("popupText").innerText = p.dataset.text;
-    document.getElementById("popup").style.display = "flex";
-  });
-});
-
-document.getElementById("close").onclick = () => {
-  document.getElementById("popup").style.display = "none";
-};
-</script>
-
+  <!-- JS BAĞLANTISI (ÇOK ÖNEMLİ: EN ALTTA) -->
+  <script src="app.js"></script>
 </body>
 </html>
