--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <header class="top-bar">
   <h1>Sand Stone Lineup</h1>
+
+  <div class="tabs">
+    <button class="tab active" data-type="smoke">💣 Smoke</button>
+    <button class="tab" data-type="flash">⚡ Flash</button>
+    <button class="tab" data-type="molly">🔥 Molly</button>
+  </div>
 </header>
 
 <main>
@@ -20,10 +26,15 @@
       alt="Mini Map"
     >
 
-    <!-- DOĞRU NOKTALAR -->
-    <div class="point" data-name="A Site" style="top:38%; left:28%;"></div>
-    <div class="point" data-name="B Site" style="top:60%; left:72%;"></div>
-    <div class="point" data-name="Market" style="top:50%; left:48%;"></div>
+    <!-- SMOKE -->
+    <div class="point smoke" data-name="A Site Smoke" style="top:38%; left:28%;"></div>
+    <div class="point smoke" data-name="Market Smoke" style="top:50%; left:48%;"></div>
+
+    <!-- FLASH -->
+    <div class="point flash" data-name="B Site Flash" style="top:60%; left:72%;"></div>
+
+    <!-- MOLLY -->
+    <div class="point molly" data-name="Mid Molly" style="top:25%; left:55%;"></div>
   </div>
 </main>
 
@@ -32,14 +43,12 @@
   <div class="popup-card">
 
     <div class="popup-header">
-      <span id="popupTitle">Market</span>
+      <span id="popupTitle">Lineup</span>
       <button class="popup-close" id="closePopup">✕</button>
     </div>
 
     <div class="popup-body">
-      <button class="grenade smoke">💨 Smoke</button>
-      <button class="grenade flash">⚡ Flash</button>
-      <button class="grenade molly">🔥 Molly</button>
+      <p>Yakında video eklenecek</p>
     </div>
 
   </div>
